--- a/cubicle/res/styles/styles.css
+++ b/cubicle/res/styles/styles.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'Material Symbols Rounded';
+    font-style: normal;
+    font-weight: 400;
+    src: url(./material-symbols-rounded.woff2) format('woff2');
+  }
+
+h1, h2 {
+    font-size: 1rem;
+    margin-bottom: 0.25rem;
+}
+
 .center {
     display: flex;
     justify-content: center;
@@ -10,6 +22,7 @@
 }
 
 .icon {
+    font-family: 'Material Symbols Rounded';
     width: 1rem;
     height: 1rem;
     padding: 0;
