Added modify functionality and sorted out cookie store ID serialization

--- a/cubicle/res/components/new-container.html
+++ b/cubicle/res/components/new-container.html
@@ -1,15 +1,21 @@
-<h1>Create new container</h1>
+{% if identity %}
+  <h1>Update existing container</h1>
+{% else %}
+  <h1>Create new container</h1>
+{% endif %}
 <dialog style="border: none;" open="">
   <form id="form-new-container" method="dialog">
     <input type="text" name="name" maxlength="256" placeholder="container name"
+        value="{% if identity %}{{identity.name}}{% endif %}"
         style="flex-grow: 2; margin: auto 0.5rem;"/>
     <h2>Color</h2>
     <ul style="display: flex; flex-wrap: wrap; list-style: none; margin: 0; padding: 0;">
       {% for color in colors %}
         <li style="padding: 0.25rem;">
           <input type="radio" id="radio-{{color}}" name="color" value="{{color}}"
-              style="display: none;"/>
-          <label aria-label="{{color}}" for="radio-{{color}}">
+              style="display: none;"
+              {% if identity and color == identity.color %}checked=""{% endif %}/>
+          <label aria-label="{{color}}" for="radio-{{color}}" style="cursor: pointer;">
             <span aria-hidden="true" class="icon" style="color: {{color}};">&#xf163;</span>
           </label>
         </li>
@@ -20,8 +26,9 @@
       {% for icon in icons %}
         <li style="padding: 0.25rem;">
           <input type="radio" id="radio-{{icon.0}}" name="icon" value="{{icon.0}}"
-              style="display: none;"/>
-          <label for="radio-{{icon.0}}">
+              style="display: none;"
+              {% if identity and icon.0 == identity.icon %}checked=""{% endif %}/>
+          <label for="radio-{{icon.0}}" style="cursor: pointer;">
             <img src="{{icon.1}}" alt="{{icon.0}}" class="icon" draggable="false"/>
           </label>
         </li>
