--- a/cubicle/res/styles/styles.css
+++ b/cubicle/res/styles/styles.css
@@ -10,6 +10,10 @@ h1, h2 {
     margin-bottom: 0.25rem;
 }
 
+input[type='radio']:checked + label[for] {
+    border: 2px solid aqua;
+}
+
 .center {
     display: flex;
     justify-content: center;
