Added interop helpers, delete prompt, and container list update

--- a/cubicle/res/components/new-container.html
+++ b/cubicle/res/components/new-container.html
@@ -34,6 +34,12 @@
         </li>
       {% endfor %}
     </ul>
-    <button style="float: inline-end;">Create</button>
+    <button style="float: inline-end;">
+      {% if identity %}
+        Update
+      {% else %}
+        Create
+      {% endif %}
+    </button>
   </form>
 </dialog>
