Added Container wrapper for contextual identities

--- a/cubicle/res/components/delete-prompt.html
+++ b/cubicle/res/components/delete-prompt.html
@@ -1,6 +1,6 @@
 <div>
   <p>
-    Please confirm if you would like to delete container '{{identity.name}}'.
+    Please confirm if you would like to delete container '{{name}}'.
   </p>
   <button id="btn-yes">Yes</button>
   <button id="btn-no">No</button>
