Added functional Psl update in options

--- a/cubicle/res/components/options-body.html
+++ b/cubicle/res/components/options-body.html
@@ -9,6 +9,6 @@
     <button id="btn-psl-update" {% if psl_no_update %}disabled=""{% endif %}>
       Update List
     </button>
-    <span>Last updated: {{psl_last_updated}}</span>
+    <span>Last updated: <span id="lbl-psl-date">{{psl_last_updated}}</span></span>
   </div>
 </section>
