--- a/cubicle/res/components/container-detail.html
+++ b/cubicle/res/components/container-detail.html
@@ -1,9 +1,10 @@
 <ul style="list-style: none; padding: 0;">
   {% for suffix in suffixes %}
     <li style="display: flex; align-items: center;">
-      <input class="input-suffix" type="text" maxlength="256" placeholder="new suffix ... ↵"
+      <input id="suffix-{{suffix.1}}" class="input-suffix" type="text"
+          maxlength="256" placeholder="new suffix ... ↵"
           value="{{suffix.0}}" title="{{suffix.1}}" style="flex-grow: 2; margin: auto 0.5rem;"/>
-      <div id="option-btn" style="margin-inline-end: 0.5rem;">
+      <div id="option-btn-{{suffix.1}}" style="margin-inline-end: 0.5rem;">
         <button aria-label="Link suffix" class="center btn">
           <span aria-hidden="true" class="icon">&#xe157;</span>
         </button>
