Added container import page

--- a/cubicle/res/components/welcome.html
+++ b/cubicle/res/components/welcome.html
@@ -4,5 +4,5 @@
     You can create a new container by selecting above.
     Or, you can import containers from other extensions with the button below.
   </p>
-  <button class="btn" style="padding: 0.5rem;">Import</button>
+  <button id="btn-import" class="btn" style="padding: 0.5rem;">Import</button>
 </div>
