--- a/cubicle/res/components/new-container.html
+++ b/cubicle/res/components/new-container.html
@@ -1,4 +1,4 @@
-{% if details %}
+{% if update_existing %}
   <h1>Update existing container</h1>
 {% else %}
   <h1>Create new container</h1>
@@ -6,7 +6,7 @@
 <dialog style="border: none;" open="">
   <form id="form-new-container" method="dialog">
     <input type="text" name="name" maxlength="40" placeholder="container name"
-        value="{% if details %}{{details.name}}{% endif %}"
+        value="{{details.name}}"
         style="flex-grow: 2; margin: auto 0.5rem;"/>
     <h2>Color</h2>
     <ul style="display: flex; flex-wrap: wrap; list-style: none; margin: 0; padding: 0;">
@@ -14,12 +14,19 @@
         <li style="padding: 0.25rem;">
           <input type="radio" id="radio-{{color}}" name="color" value="{{color}}"
               style="display: none;"
-              {% if details and color == details.color %}checked=""{% endif %}/>
-          <label aria-label="{{color}}" for="radio-{{color}}" style="cursor: pointer;">
+              {% if color == details.color %}checked=""{% endif %}/>
+          <label aria-label="{{color}}" for="radio-{{color}}" class="framed" style="cursor: pointer;">
             <span aria-hidden="true" class="icon" style="color: {{color}};">&#xf163;</span>
           </label>
         </li>
       {% endfor %}
+      {% if not update_existing %}
+        <li>
+          <input type="radio" id="radio-cycle" name="color" value="cycle"
+              {% if details.color == "cycle" %}checked=""{% endif %}/>
+          <label for="radio-cycle">Surprise me!</label>
+        </li>
+      {% endif %}
     </ul>
     <h2>Icon</h2>
     <ul style="display: flex; flex-wrap: wrap; list-style: none; margin: 0; padding: 0;">
@@ -27,15 +34,15 @@
         <li style="padding: 0.25rem;">
           <input type="radio" id="radio-{{icon.0}}" name="icon" value="{{icon.0}}"
               style="display: none;"
-              {% if details and icon.0 == details.icon %}checked=""{% endif %}/>
-          <label for="radio-{{icon.0}}" style="cursor: pointer;">
+              {% if icon.0 == details.icon %}checked=""{% endif %}/>
+          <label for="radio-{{icon.0}}" class="framed" style="cursor: pointer;">
             <img src="{{icon.1}}" alt="{{icon.0}}" class="icon" draggable="false"/>
           </label>
         </li>
       {% endfor %}
     </ul>
     <button style="float: inline-end;">
-      {% if details %}
+      {% if update_existing %}
         Update
       {% else %}
         Create
